// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payments renders expected content for continuous leave 1`] = `
<section
  class="margin-y-4"
  data-testid="when-to-expect-payments"
>
  <p>
    You can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
  </p>
  <p>
    Your application has a 7-day waiting period at the start of your leave. You won’t receive any PFML payments during this time. Read more about the 
    <a
      href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#what-is-the-7-day-waiting-period?-"
      rel="noopener noreferrer"
      target="_blank"
    >
      7-day waiting period
    </a>
    .
  </p>
</section>
`;

exports[`Payments renders expected content for intermittent leave 1`] = `
<section
  class="margin-y-4"
  data-testid="when-to-expect-payments"
>
  <p>
    Your application has a 7-day waiting period at the first day you use your intermittent leave. You won’t receive any PFML payments during this time. Read more about the 
    <a
      href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#what-is-the-7-day-waiting-period?-"
      rel="noopener noreferrer"
      target="_blank"
    >
      7-day waiting period
    </a>
    .
  </p>
  <p>
    If your leave has not yet started, you can expect your first payment to be sent to you once you have reported at least 8 total leave hours taken or 30 days has passed since the start of your leave.
  </p>
  <p>
    If your leave has started, you can expect to receive payment about one week after the hours are filed (as long as they add up to at least 8 hours). You can receive more than one payment in a week depending on how intermittent hours are reported.
  </p>
  <p>
    You can report your hours by calling 
    <a
      href="tel:(857) 972-9256"
    >
      (857) 972-9256
    </a>
    .
  </p>
</section>
`;

exports[`Payments renders expected content for reducedSchedule leave 1`] = `
<section
  class="margin-y-4"
  data-testid="when-to-expect-payments"
>
  <p>
    You can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
  </p>
  <p>
    Your application has a 7-day waiting period at the start of your leave. You won’t receive any PFML payments during this time. Read more about the 
    <a
      href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#what-is-the-7-day-waiting-period?-"
      rel="noopener noreferrer"
      target="_blank"
    >
      7-day waiting period
    </a>
    .
  </p>
  <p>
    You need to have taken 8 hours or more of leave, or 30 days has passed since the start of your leave to be eligible for a weekly benefit payment.
  </p>
</section>
`;

exports[`Payments renders the \`changes to payments\` section 1`] = `
<section
  class="margin-y-4"
  data-testid="changes-to-payments"
>
  <div
    aria-multiselectable="true"
    class="usa-accordion usa-accordion--bordered"
  >
    <h2
      class="usa-accordion__heading"
    >
      <button
        aria-controls="accordion7"
        aria-expanded="false"
        class="usa-accordion__button"
        type="button"
      >
        What may change your payment schedule
      </button>
    </h2>
    <div
      class="usa-accordion__content usa-prose"
      data-testid="accordion7"
      hidden=""
      id="accordion7"
    >
      <ul>
         
        <li>
          State and federal holidays
        </li>
        <li>
          Your bank’s processes
        </li>
        <li>
          Pay periods that end on a weekend
        </li>
        <li>
          Payments may be delayed if we need to adjust your benefit amount based on extensions, other income or benefits you’ve reported and other process delays
        </li>
      </ul>
    </div>
    <h2
      class="usa-accordion__heading"
    >
      <button
        aria-controls="accordion8"
        aria-expanded="false"
        class="usa-accordion__button"
        type="button"
      >
        What may change your benefit amount
      </button>
    </h2>
    <div
      class="usa-accordion__content usa-prose"
      data-testid="accordion8"
      hidden=""
      id="accordion8"
    >
      <p>
        See your approval notice for your maximum weekly benefit. We may reduce your benefit amount based on 
        <a
          href="https://www.mass.gov/info-details/how-other-leave-and-benefits-can-affect-your-paid-family-and-medical-leave"
          rel="noopener noreferrer"
          target="_blank"
        >
          other leave, income and benefits
        </a>
         you reported to us. You will receive another notice in this application’s details if we reduce or offset your benefit amount.
      </p>
      <p>
        Other scenarios that may change your benefit amount are:
      </p>
      <ul>
         
        <li>
          You reach the $850 benefit total across multiple employers
        </li>
        <li>
          If you transition from medical pregnancy to leave to bond with a child
        </li>
        <li>
          Extending your leave
        </li>
      </ul>
       
      <p>
        Check your 
        <a
          href="/applications/status?absence_id=mock-absence-case-id/#view_notices"
        >
          application’s notices
        </a>
         to see your approval notice and any updates to your approved benefit amount.
      </p>
    </div>
    <h2
      class="usa-accordion__heading"
    >
      <button
        aria-controls="accordion9"
        aria-expanded="false"
        class="usa-accordion__button"
        type="button"
      >
        Change your payment preference
      </button>
    </h2>
    <div
      class="usa-accordion__content usa-prose"
      data-testid="accordion9"
      hidden=""
      id="accordion9"
    >
      <p>
        To make changes to your application, call the Contact Center at 
        <a
          href="tel:(833) 344-7365"
        >
          (833) 344‑7365
        </a>
        . If you request a change to your start and end dates, we may need to review your application again.
      </p>
    </div>
  </div>
</section>
`;

exports[`Payments renders the \`questions?\` section 1`] = `
<section
  class="margin-y-4"
  data-testid="questions"
>
  <h3
    class="margin-bottom-2 font-heading-sm text-bold"
  >
    Questions?
  </h3>
  <p>
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
    >
      (833) 344‑7365
    </a>
    .
  </p>
</section>
`;
